--- a/packages/babel/package.json
+++ b/packages/babel/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.9.6",
     "babel-preset-env": "^1.7.0",
     "babel-loader": "^8.1.0",
     "webpack": "^4.43.0"
