--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,24 +2,13 @@
   "name": "@macro/core",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "start": "webpack --watch --progress --mode development",
-    "build": "webpack --mode production"
+  "dependencies": {
+    "robotjs": "^0.6.0"
+  },
+  "devDependencies": {
+    "@macro/babel": "*",
+    "@babel/core": "^7.9.6"
   },
   "license": "MIT",
-  "private": true,
-  "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@macro/babel": "*",
-    "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "reload-server-webpack-plugin": "^1.0.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-node-externals": "^1.7.2"
-  },
-  "dependencies": {
-    "robotjs": "^0.6.0",
-    "yargs": "^15.3.1"
-  }
+  "private": true
 }
